fix overflow problem

--- a/css/pokemonDetail.css
+++ b/css/pokemonDetail.css
@@ -2,10 +2,12 @@ body {
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 main {
     max-width: 600px;
+    overflow-x: hidden;
 }
 
 .pokeball-icon {
